# docsweep

./: .docsweep.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  NOTICES.md  README.en.md  README.md  docSweep-ui.cmd  docSweep-ui.command  docSweep-ui.sh  docsweep-ui.cmd  docsweep-ui.command  docsweep-ui.sh  package.json  portfolio.md  pyproject.toml  tsconfig.json  vite.config.ts
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml
archive/: plan_drop-last-updated-followup.md  plan_name-docsweep-availability.md  plan_templates-drop-last-updated-line.md
docs/: D-skill-update-proposal.md  ai-agent-integration.md  conventions.md  guidance-rewrite-proposal.md  okf-export-format.md  okf-mapping.md
docs/mockups/: dashboard_v0.1.0.html  dashboard_v2.html  mcp_usage_v0.1.0.html
docs/zenn/docsweep/2026-06-22_slash-commands-p-s-d/: 20260622-claude-code-slash-commands.md
docsweep/: __init__.py  activity.py  aggregate_index.py  archive.py  atomic.py  auto_triage.py  claim.py  cli.py  completion.py  config.py  context.py  cookbook.py  day.py  detect.py  doctor.py  engine.py  excluded.py  export.py  find.py  fix_conflict.py  hints.py  history.py  ics_export.py  index.py  init_cmd.py  inject.py  intent.py  interactive.py  linkcheck.py  mcp_server.py  memory_scan.py  migrate.py  models.py  notify.py  presets.py  related.py  reports.py  review.py  scan.py  secrets_guard.py  (+6 more)
docsweep/brief/: __init__.py  score.py  service.py
docsweep/capture/: __init__.py  heuristics.py  llm.py  models.py  service.py
docsweep/cli/: __init__.py  parser.py
docsweep/cli/commands/: __init__.py  completion.py  excluded.py  ics.py  index.py  init.py  inject.py  mcp.py  memory.py  notify.py  read.py  serve.py  write.py
docsweep/cross/: __init__.py  service.py
docsweep/graph/: __init__.py  service.py
docsweep/inject/: __init__.py  agent_claude.py  agent_codex.py  api.py  blocks.py  manifest.py
docsweep/resurrect/: __init__.py  embedding.py  service.py  similarity.py
docsweep/security/: __init__.py  path.py
docsweep/server/: __init__.py  app.py  config_write.py  i18n.py  sanitize.py  security.py
docsweep/server/routes/: __init__.py  board.py  brief.py  capture.py  cards.py  cross.py  graph.py  resurrect.py
docsweep/server/static/: app.css  app.js  board.css  dnd.js  edit.js  i18n.js  keymap.js
docsweep/server/templates/: _back_picker.html  _board_body.html  _card.html  _change_picker.html  _dashboard_body.html  _due_picker.html  _edit_pane.html  _label_picker.html  _list.html  _preview.html  _settings.html  board.html  brief.html  capture.html  cross.html  dashboard.html  graph.html  index.html  resurrect.html
docsweep/services/: __init__.py  archive.py  content.py  due.py  frontmatter.py  status.py
src/: app.ts  htmx-global.d.ts
templates/: .docSweep.yaml  .docsweep.yaml  AGENTS.md  AGENT_GUIDE.md  CLAUDE.md  install-hooks.ps1  install-hooks.sh
templates/.githooks/: docsweep-check.py
tests/: test_activity.py  test_atomic.py  test_audit_fixes.py  test_audit_fixes_2026_07_16.py  test_audit_server.py  test_brief.py  test_c2_commands.py  test_c5_features.py  test_capture.py  test_cli_smoke.py  test_config.py  test_config_due.py  test_cross.py  test_db_index.py  test_detect.py  test_doctor.py  test_engine.py  test_export.py  test_extras.py  test_githooks.py  test_index_prune.py  test_index_stats.py  test_index_vacuum.py  test_index_wal.py  test_init_and_undo_cli.py  test_interactive.py  test_invariants.py  test_mcp_tools.py  test_mcp_write_tools.py  test_new_cli_project_dir_autodetect.py  test_parser.py  test_resurrect.py  test_server.py  test_server_board.py  test_server_bulk.py  test_server_okf.py  test_server_routes_extras.py  test_services_archive.py  test_services_content.py  test_services_due.py  (+9 more)
