[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docsweep"
version = "0.3.0"
description = "Sweep, triage and archive AI coding agents' plan/bugfix/pending Markdown across projects."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ishizakahiroshi", email = "ishizakahiroshi.dev@gmail.com" }]
keywords = ["claude-code", "codex", "markdown", "archive", "ai-agents", "cli", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Web UI (FastAPI + htmx/Jinja2) — UX 主役。core だけ使う cron/AI 委譲では不要。
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "markdown>=3.6",
    "python-multipart>=0.0.18",
    "nh3>=0.2",
]
# 対話チェックリスト（--review 専用）
review = [
    "questionary>=2.0",
]
# MCP stdio サーバー
mcp = [
    "mcp>=1.0",
]
# index-watch 用ファイル監視（任意・``docsweep watch`` だけが依存する）
watch = [
    "watchdog>=4.0",
]
# resurrect 用 embedding 類似度（任意・``docsweep resurrect`` だけが依存する）
# 未インストール時は Jaccard フォールバックで動く（精度は落ちるが配布簡素）。
resurrect = [
    "sentence-transformers>=2.0",
]
# 全部入り（配布既定: CLI+Web+MCP+review+watch+resurrect が 1 パッケージ）
# resurrect が sentence-transformers（torch/CUDA を引きずる GB 級）を含むため
# 軽量版 all-lite も用意（resurrect を除いた実用最小 = 大半のユーザーはこちらで足りる）。
all = [
    "docsweep[web,review,mcp,watch,resurrect]",
]
all-lite = [
    "docsweep[web,review,mcp,watch]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/ishizakahiroshi/docsweep"
Repository = "https://github.com/ishizakahiroshi/docsweep"

[project.scripts]
docsweep = "docsweep.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["docsweep"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# 段階導入: 既存 codebase が pre-existing パターンで pass しない状態のため、
# 監査シリーズ (v0.3.0) の scope は「CI に ruff を配線する」までに留め、rule 拡張
# （SIM / RUF / PLE / PIE 等）と既存 warning cleanup は別 PR で扱う（M-11 続編）。
# 特に RUF001/002/003 は JP 全角括弧を ambiguous unicode 扱いするため JP-first コード
# ベースでは大量ノイズになる。
select = ["E", "F", "I", "UP", "B"]
# 既存コードスタイル温存（監査シリーズの scope 外・別 refactor PR で cleanup 予定）:
# - E501: 100 char 上限は JP CJK 幅換算で現実的でない（別 PR で line-length=120 検討）
# - E402: 大依存の lazy import が意図的（起動時間削減）
# - F401: __init__.py の re-export 経路で必要
# - F841: 一部は test 残骸・別 cleanup で解消予定
# - BLE001: `except Exception: pass` は graceful degradation の意図的パターン
# - B008: FastAPI の `Query()` / `Body()` を default 引数に置くのは framework 慣習
# - UP035: `typing.List` 等の deprecated import は一部 lazy import で残っている
ignore = ["E501", "E402", "F401", "F841", "BLE001", "B008", "UP035"]

[tool.mypy]
# 段階導入: strict モードは既存コードで大量エラーになるため見送り。
# 外部ライブラリ（mcp / sentence_transformers 等）は stub 無しなので ignore_missing_imports で緩める。
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# 未宣言 marker と設定ミスを即エラー化（tests/ で `@pytest.mark.foo` を新規追加した際の
# タイポを検知）。既存 tests に custom marker が無いことを確認済み → 追加影響なし。
addopts = "-ra --strict-markers --strict-config"
